# nyx-agents

./: .env.example  .gitignore  =0.26.0  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  HOWTOUSE.md  LICENSE  MODEL_GUIDE.md  README.md  ROADMAP.md  SANITIZED_ENV.md  Untitled.ipynb  article-sim.py  athena-TODO.txt  cli.py  deprecated.py  getid.py  getlimits.py  main-test.py  main.py  news-test.py  posted_articles.json  prompt.txt  pyproject.toml  quant_inference1.ipynb  reply_state.json  requirements-hf.txt  requirements.txt  setup.sh  test-main.py  test-twitter-client.py  test_imports.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
athena_training/: load_falcon.ipynb  qa_data_final_clean.jsonl
bot/: __init__.py  athena.code-workspace  bot.py  config.py  content_analyzer.py  hooks.py  meme_handler.py  model_config.py  prompt_templates.py  prompts.py  reply_handler.py  style_config.py  text_cleaner.py  text_processor.py  tweet_generator.py  twitter_client.py  utilities.py
bot/configs/: model_config.py  posting_config.py  style_config.py
bot/processors/: __init__.py  cleaning_patterns.py  content_analyzer.py  patterns.py  prompt_templates.py  text_cleaner.py  text_processor.py  validators.py
bot/services/: article_utils.py  config.py  image_generator.py  meme_handler.py  news_service.py  reply_handler.py  test-news-service.py  tweet_generator.py
examples/local_llm/: .env.example  README.md  bot.yml
examples/nyxagents/: .env.example  README.md  bot.yml  persona.yml  prompts.yml
fetch_news/: fetch_latest.py
lilbot/: __init__.py  __main__.py  agent.py  cli.py  config.py  controller.py  model.py  onboarding.py  paths.py  personal_ops.py  prompts.py
lilbot/agent/: context.py  planner.py  runner.py
lilbot/automation/: __init__.py  azure_vm_generator.py  powershell_generator.py
lilbot/cli/: _agent_policy.py  _agent_prompting.py  _agent_protocol.py  _agent_types.py  agent.py  main.py
lilbot/core/: __init__.py  agent_loop.py  session_store.py
lilbot/llm/: __init__.py  prompt_builder.py  provider.py
lilbot/memory/: __init__.py  conversation_memory.py  memory.py  memory_store.json  session.py  sqlite_store.py  vector_store.py
lilbot/model/: __init__.py  base.py  hf_model.py
lilbot/ops/: __init__.py  models.py  planning_engine.py  runbook_parser.py  standards_parser.py  ticket_parser.py
lilbot/retrieval/: __init__.py  chunking.py  embedder.py  embeddings.py  index.py  search.py
lilbot/safety/: __init__.py  shell_policy.py
lilbot/tools/: __init__.py  base.py  base_tool.py  docs_search.py  filesystem.py  history.py  logs.py  news_fetch.py  news_summarize.py  notes.py  profile.py  registry.py  repo.py  shell.py  system.py  twitter_post.py
lilbot/utils/: __init__.py  config.py  formatting.py  logging.py
lilbot/workspace/: __init__.py  artifact_loader.py  vault_indexer.py
memes/: meme-test.py  mock.py
new_src/: posted_articles.json  reply_state.json
new_src/bot/: initializers.py  main_bot.py
new_src/config/: model_config.py  personality_config.py  posting_config.py
notebooks/: Untitled1.ipynb  final_quant.ipynb  quant_inference1.ipynb  tweak1.ipynb
src/: input.txt  main.py  posted_articles.json  reply_state.json  sim-main.py  structure.txt
src/bot/: bot.py  initializers.py  main_bot.py  prompts.py  utilities.py
src/config/: model_config.py  (+2 more)
tests/: getid.py  sentiment-test.py  test_agent.py  test_agent_loop.py  test_cli.py  test_config.py  test_memory.py  test_model.py  test_provider.py  test_shell_policy.py  test_tools.py
(+91 files in other folders)
