[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lilbot"
version = "0.4.0"
description = "Local-first AI CLI assistant for developers and system administrators"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Lilbot Contributors" }
]
keywords = ["llm", "agent", "cli", "local-first", "huggingface", "developer-tools"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Intended Audience :: Developers",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ImZackAdams/lilbot"
Repository = "https://github.com/ImZackAdams/lilbot"
Issues = "https://github.com/ImZackAdams/lilbot/issues"
Documentation = "https://github.com/ImZackAdams/lilbot#readme"

[project.optional-dependencies]
hf = [
  "torch>=2.5,<2.6",
  "transformers>=4.47,<5",
  "accelerate>=1.2,<2",
]
quantization = [
  "bitsandbytes>=0.45,<0.46",
]

[project.scripts]
lilbot = "lilbot.cli:main"

[tool.setuptools.packages.find]
include = ["lilbot*"]
